--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chart.js": "^2.9.3",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "minimist": "^1.2.5",
     "path": "^0.12.7",
-    "request": "^2.88.0",
-    "chart.js": "^2.9.3"
+    "request": "^2.88.0"
   }
 }
